--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: black;
+}
 .navbar-container {
     display: flex;
     justify-content: center;
@@ -12,9 +15,20 @@
     align-items: center;
     padding: 10px 20px;
     flex-direction: column;
-    width: 75%;
+    width: 85%;
+    font-weight: bolder;
 }
 
+.navbar a{
+    color: #737373;
+}
+
+.nav-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 10px;
+}
 .nav-link a {
     text-decoration: none;
     margin: 0 10px;
@@ -23,20 +37,21 @@
 
 .navbar-first {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
+
 }
 
 .navbar-second{
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
 .nav-login{
+    display: flex;
     border-left: 1px solid rgba(108, 108, 108, 0.49);
     padding: 10px;
+    text-align: center;
 }
 .nav-login a{
     text-decoration: none;
@@ -46,8 +61,9 @@
 .nav-search{
     display: flex;
     align-items: center;
-    margin: 0 10px;
+    width: 65%;
 }
+
 .nav-search form {
     display: flex;
     align-items: center;
@@ -56,11 +72,18 @@
 
 .nav-search input{
     border-radius: 20px;
-    border: 1px solid rgba(108, 108, 108, 0.49);
+    border: 1px rgba(108, 108, 108, 0.49);
     padding-left: 10px;
-    width: 300px;
+    width: 600px;
+    background-color: rgb(236, 236, 236);
+    height: 35px;
 }
-
+.nav-buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 .nav-buttons a {
     text-decoration: none;
     margin: 0 10px;
