Se agregó la imagen del fondo de la figura

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,8 @@
-body{
-    background-color: black;
+.main-container{
+    background-image:url(static/images/Muyuna-lodge-Iquitos.png);
+    background-size: cover;
+    min-height: 100vh;
+    display: flex;
 }
 .navbar-container {
     display: flex;
