--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-<!--    <link th:href="@{/bootstrap.min.css}" rel="stylesheet"/>
+<!--    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>-->
 </head>
 <body>
@@ -44,5 +44,10 @@
         </nav>
     </div>
 </header>
+<main>
+    <div class="main-container">
+
+    </div>
+</main>
 </body>
 </html>
