Se añadieron las letras y el botón de comprar para el fondo, además, ya está implementado en Thymeleaf

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,9 +1,28 @@
 .main-container{
-    background-image:url(static/images/Muyuna-lodge-Iquitos.png);
+    background-image:url(/images/Muyuna-lodge-Iquitos.png);
     background-size: cover;
     min-height: 100vh;
     display: flex;
+    color: white;
 }
+
+
+
+.background-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50vw;
+    height: 100vh;
+}
+
+.background-container a{
+    background-color: white;
+    color: black;
+    width: 20%;
+    font-weight: bolder;
+}
+
 .navbar-container {
     display: flex;
     justify-content: center;
