--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -20,11 +20,11 @@
                     </form>
                 </div>
                 <div class="nav-buttons">
-                    <a class="" href="/newUser">Explorar</a>
-                    <a class="" href="/newUser">Mis vuelos</a>
+                    <a class="" href="#">Explorar</a>
+                    <a class="" href="#">Mis vuelos</a>
                 </div>
                 <div class="nav-login">
-                    <a class="" href="/login">Inicia Sesión</a>
+                    <a class="" href="#">Inicia Sesión</a>
                 </div>
             </div>
             <div class="navbar-second">
@@ -46,7 +46,17 @@
 </header>
 <main>
     <div class="main-container">
-
+        <div class="background-container">
+            <div class="row">
+                <h1>Iquitos</h1>
+            </div>
+            <div class="row">
+                <p>Descubra maravillas ocultas y destinos inspiradores en Iquitos</p>
+            </div>
+            <div class="row">
+                <a href="#" class="btn btn-close-white">Comprar</a>
+            </div>
+        </div>
     </div>
 </main>
 </body>
