--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,6 +15,8 @@
     width: 50vw;
     height: 100vh;
     border-radius: 5px;
+    padding-left: 30px;;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .background-container a{
